@@ -1,3 +1,9 @@
+2013-05-21  Andreas Schwab  <schwab@suse.de>
+
+	[BZ #15493]
+	* setjmp/Makefile (tests): Add tst-sigsetjmp.
+	* setjmp/tst-sigsetjmp.c: New test.
+
 2013-05-20  Ondřej Bílka  <neleai@seznam.cz>
 
 	* sysdeps/x86_64/memset.S (memset): New implementation.
